# TA-TA-Switch

./: .gitignore  Cargo.toml  README.md  app.manifest  resources.rc
docs/: README.ko.md
locales/: en.json  ko.json
src/: account_manager.rs  game_launcher.rs  i18n_manager.rs  main.rs  path_manager.rs  settings_manager.rs
