[package]
name = "ta-ta-switch"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "TA-TA-Switch"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
muda = "0.15"
native-windows-gui = "1.0"
native-windows-derive = "1.0"
dirs = "6.0"
configparser = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
once_cell = "1.20"
image = { version = "0.24", default-features = false, features = ["ico"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "1.8"
